fixed alignment

--- a/assets/style/_font.sass
+++ b/assets/style/_font.sass
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6
     background: tomato
   h2
     font-size: 1.75rem
-    margin: 0 0 .5rem 0
+    margin: 0 0 1rem 0
   h3
     font-size: 1.75rem
     margin: 0 0 .25rem 0
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6
   p
     margin: 0 0 1rem 0
     font-size: 1.2rem
-    line-height: 1.5
+    line-height: 1.75
   ul
     list-style: disc
     margin: 0 0 1rem 1rem
